classDiagram
    direction TB
    class ProtocolNode {
        +Send(Message) Coro::Result~void~
        +RequestForResponse(Message, RetryPolicy)
        +RequestForResult(Message, RetryPolicy, mid, ms)
        +RequestForResultDirect(Message, RetryPolicy, mid)
        +Subscribe(Key) Coro::Result~Ticket~
        -AwaitAccept() / EncodeAndWrite()
        -DecodeAndDispatch() / Dispatch()
        -NextSession() uint8
    }
    class DdsNode {
        +RegisterPublishers / RegisterSubscribers(topics)
        +RegisterClients / RegisterServices(service_names)
        +UnregisterPublishers / UnregisterSubscribers(topics)
        +UnregisterClients / UnregisterServices(service_names)
        +Publish(topic, Message)
        +Subscribe(TopicKey, KindKey) Coro::Result~Ticket~
        +RequestForResultDirect(service, Message, RetryPolicy)
        +ServeRequests(service) / Reply(request, result)
    }
    class NodeBase {
        +Start() Coro::Result~void~
        +Close() Coro::Result~void~  只发信号
        +WaitClosed() void  join
        +IsRunning() bool
        #DoStart()* / DoClose()* / DoJoin()*
    }
    class Dispatcher~T_Fields~ {
        +Subscribe(Key) Coro::Result~Ticket~
        +Dispatch(const T&) size_t
        +CloseAll(error)
        -unordered_map~Mask, map~Values, vector~Entry~~~
    }

    NodeBase <|-- ProtocolNode : 继承
    NodeBase <|-- DdsNode : 继承
    ProtocolNode *-- Dispatcher : 组合
    ProtocolNode ..> ICodec : 组合（按引用）
    ProtocolNode ..> ITransport : 按引用借用（不拥有、不启停）
    note for Dispatcher "订阅时不参与匹配的字段填 kAny\n一条消息投给全部键匹配者，各得一份\n投递【不终结】订阅，只有 resolve、无 erase\n成本 O(在用 mask 种数 + 收件人数)"
    note for NodeBase "Close 只发信号、任何 fiber 可调；\nWaitClosed 无时限，语义即 join"
    note for DdsNode "请求-响应只说服务名；两个 topic 由
cfg.<名>.request / cfg.<名>.response 派生
注册/注销在 Created 与 Running 都受理（Running 期当场建/拆端点）
Subscribe 只在 Running"

    DdsNode ..> ITransport : 按引用借用（不拥有、不启停）
